--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,5 @@
-/*
-    You can add your own custom styles here.
-*/
+figure.gallery-70 img {
+  max-width: 70%;
+  margin: 0 auto;
+  display: block;
+}
